# blosc2-rs

./: .gitignore  .gitmodules  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
blosc2/: Cargo.lock.ci  Cargo.toml  README.md  build.rs
blosc2-sys/: Cargo.toml  README.md  build.rs
blosc2-sys/c/: bindings.h  blosc2.h  blosc2_rs.c  blosc2_rs.h
blosc2-sys/src/: lib.rs
blosc2/src/: chunk.rs  encode.rs  error.rs  global.rs  lib.rs  misc.rs  params.rs  schunk.rs  tracing.rs  util.rs
blosc2/src/chunk/: chunk.rs  encode.rs  mod.rs  schunk.rs
blosc2/src/nd/: mod.rs  params.rs  python.rs
blosc2/src/nd/dtype/: ast.rs  mod.rs  numpy_str.rs
blosc2/src/ndarray/: ast.rs  dtype.rs  mod.rs  params.rs
blosc2/src/ndarray/dtype/: mod.rs  numpy_str.rs
