[package]
name = "blosc2-rs-sys"
version = "0.1.2"
edition = "2021"
# println!("cargo::...")
rust-version = "1.77.0"
authors = ["Barak Ugav <barakugav@gmail.com>"]
description = "Unsafe Rust bindings for blosc2 - a fast, compressed, persistent binary data store library"
links = "blosc2"
readme = "README.md"
repository = "https://github.com/barakugav/blosc2-rs"
license = "Apache-2.0"
keywords = ["blosc", "blosc2", "bindings", "compression"]
categories = ["compression", "external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"

[features]
zlib = []
zstd = []


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
