[package]
name = "blosc2"
version = "0.1.1"
edition = "2021"
# println!("cargo::...")
rust-version = "1.77.0"
authors = ["Barak Ugav <barakugav@gmail.com>"]
description = "Safe Rust bindings for blosc2 - a fast, compressed, persistent binary data store library"
readme = "README.md"
repository = "https://github.com/barakugav/blosc2-rs"
license = "Apache-2.0"
keywords = ["blosc", "blosc2", "bindings", "compression"]
categories = ["compression", "external-ffi-bindings"]

[dependencies]
blosc2-sys = { package = "blosc2-rs-sys", path = "../blosc2-sys", version = "0.1.2" }
libc = "0.2"
cfg-if = "1.0.0"
half = { version = "2.4", default-features = false, optional = true }
num-complex = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
rand = "0.9"
tempfile = "3.13"

[features]
zlib = ["blosc2-sys/zlib"]
zstd = ["blosc2-sys/zstd"]
half = ["dep:half"]
num-complex = ["dep:num-complex"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
